# fitdata

./: .pre-commit-config.yaml  README.md  auth-main.py  fitbit.py  main.py  paths.py  pyproject.toml  sheets.py
