[project]
name = "fitdata"
version = "0.1.0"
description = "Fitness data gatherer"
authors = [
    {name = "Eric Smith", email = "eric@esmithy.net"},
]
dependencies = [
    "httpx>=0.27.2",
    "Authlib>=1.3.2",
    "gspread>=6.1.2",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "pyright>=1.1.382.post1",
]

[tool.pdm.scripts]
types = "pyright"

[tool.pyright]
reportPrivateImportUsage = "none"
